[package]
name = "jim"
description = "Named configuration management for vim"
authors = ["cwlittle <cwlittle@utexas.edu>"]
license = "MIT"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
toml = "0.5.3"
